Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -1,12 +1,146 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+</head>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<body>
 
-  </body>
+<header>
+  <nav>
+    <a>
+    <img src="https://via.placeholder.com/160x65" alt="логотип nerds">
+    </a>
+    <ul>
+      <li><a href="blank.html">Студия</a></li>
+      <li><a href="blank.html">Клиенты</a></li>
+      <li><a href="catalog.html">Магазин</a></li>
+      <li><a href="blank.html">Контакты</a></li>
+    </ul>
+    <a href="blank.html">Корзина</a>
+  </nav>
+
+  <section>
+    <h2>Долго, дорого, скурпулезно.</h2>
+    <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+    <a href="blank.html">Узнать больше</a>
+  </section>
+
+  <section>
+    <h2>Фотослайды</h2>
+    <figure>
+      <a href="#">
+      <img src="https://via.placeholder.com/760x431" alt="слайд1">
+      </a>
+    </figure>
+    <button type="button" disabled>кнопка1</button>
+    <button type="button">кнопка2</button>
+    <button type="button">кнопка3</button>
+  </section>
+</header>
+
+<main>
+
+  <h1>Студия дизайна nёrd's</h1>
+
+  <section>
+    <h2>Услуги</h2>
+    <ul>
+      <li>
+        <img src="https://via.placeholder.com/300x146" alt="иллюстрация веб-сайты">
+        <h3>ВЕБ-САЙТЫ</h3>
+        <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+        <a href="blank.html">Заказать</a>
+      </li>
+      <li>
+        <img src="https://via.placeholder.com/300x146" alt="иллюстрация приложения">
+        <h3>ПРИЛОЖЕНИЯ</h3>
+        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+        <a href="blank.html">Заказать</a>
+      </li>
+      <li>
+        <img src="https://via.placeholder.com/300x146" alt="иллюстрация презентации">
+        <h3>ПРЕЗЕНТАЦИИ</h3>
+        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+        <a href="blank.html">Заказать</a>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
+    <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+    <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
+    <ul>
+      <li>Веб-сайтов любой сложности</li>
+      <li>Мобильных приложений для iOS и Android</li>
+      <li>Слайдшоу и видео для корпоративных презентаций</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Статистика</h2>
+    <img src="https://via.placeholder.com/360x208" alt="изображение nerds">
+    <p>С 2004 года любим точность во всем:</p>
+    <ul>
+      <li>
+        <p>146%</p>
+        <p>Уровень самоотдачи<p>
+      </li>
+      <li>
+        <p>100%</p>
+        <p>Соблюдение сроков<p>
+      </li>
+      <li>
+        <p>50%</p>
+        <p>Минимальная предоплата<p>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Наши партнеры:</h2>
+    <ul>
+      <li>
+        <a href="#">
+        <img src="https://via.placeholder.com/199x68" alt="партнер html academy">
+        </a>
+      </li>
+      <li>
+        <a href="#">
+        <img src="https://via.placeholder.com/209x90" alt="партнер Barbershop BORODINSKI">
+        </a>
+      </li>
+      <li>
+        <a href="#">
+        <img src="https://via.placeholder.com/185x52" alt="партнер PINK">
+        </a>
+      </li>
+      <li>
+        <a href="#">
+        <img src="https://via.placeholder.com/173x84" alt="партнер MiSHKA">
+        </a>
+      </li>
+    </ul>
+  </section>
+</main>
+
+<footer>
+  <h2>Наш адрес и месторасположение:</h2>
+  <!-- Здесь будет карта -->
+  <section>
+    <h3>NЁRDS DESIGN STUDIO</h3>
+    <p>191186, Санкт-Петербург,<br>
+    ул. Б. Конюшенная, д. 19/8</p>
+    <p>тел. +7 (812) 275-75-75</p>
+    <a href="blank.html">НАПИШИТЕ НАМ</a>
+  </section>
+
+  <section>
+    <h3>маркер nёrd's на карте</h3>
+    <img src="https://via.placeholder.com/231x190" alt="маркер nёrd's на карте">
+  </section>
+</footer>
+</body>
 </html>
