--- a/index.html
+++ b/index.html
@@ -13,27 +13,36 @@
     <img src="https://via.placeholder.com/160x65" alt="логотип nerds">
     </a>
     <ul>
-      <li><a href="blank.html">Студия</a></li>
-      <li><a href="blank.html">Клиенты</a></li>
+      <li><a href="#">Студия</a></li>
+      <li><a href="#">Клиенты</a></li>
       <li><a href="catalog.html">Магазин</a></li>
-      <li><a href="blank.html">Контакты</a></li>
+      <li><a href="#">Контакты</a></li>
     </ul>
-    <a href="blank.html">Корзина</a>
+    <a href="#">Корзина</a>
   </nav>
 
   <section>
-    <h2>Долго, дорого, скурпулезно.</h2>
-    <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-    <a href="blank.html">Узнать больше</a>
-  </section>
-
-  <section>
     <h2>Фотослайды</h2>
-    <figure>
-      <a href="#">
-      <img src="https://via.placeholder.com/760x431" alt="слайд1">
-      </a>
-    </figure>
+    <ul>
+      <li>
+        <p>Долго, дорого, скурпулезно.</p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <a href="#">Узнать больше</a>
+        <img src="https://via.placeholder.com/760x431" alt="слайд 1">
+      </li>
+      <li>
+        <p>Долго, дорого, скурпулезно.</p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <a href="#">Узнать больше</a>
+        <img src="https://via.placeholder.com/760x431" alt="слайд 2">
+      </li>
+      <li>
+        <p>Долго, дорого, скурпулезно.</p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <a href="#">Узнать больше</a>
+        <img src="https://via.placeholder.com/760x431" alt="слайд 3">
+      </li>
+    </ul>
     <button type="button" disabled>кнопка1</button>
     <button type="button">кнопка2</button>
     <button type="button">кнопка3</button>
@@ -51,25 +60,26 @@
         <img src="https://via.placeholder.com/300x146" alt="иллюстрация веб-сайты">
         <h3>ВЕБ-САЙТЫ</h3>
         <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-        <a href="blank.html">Заказать</a>
+        <a href="#">Заказать</a>
       </li>
       <li>
         <img src="https://via.placeholder.com/300x146" alt="иллюстрация приложения">
         <h3>ПРИЛОЖЕНИЯ</h3>
         <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-        <a href="blank.html">Заказать</a>
+        <a href="#">Заказать</a>
       </li>
       <li>
         <img src="https://via.placeholder.com/300x146" alt="иллюстрация презентации">
         <h3>ПРЕЗЕНТАЦИИ</h3>
         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-        <a href="blank.html">Заказать</a>
+        <a href="#">Заказать</a>
       </li>
     </ul>
   </section>
 
   <section>
-    <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
+    <h2>О нас</h2>
+    <p>Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
     <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
     <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
     <ul>
@@ -85,16 +95,16 @@
     <p>С 2004 года любим точность во всем:</p>
     <ul>
       <li>
-        <p>146%</p>
-        <p>Уровень самоотдачи<p>
+        <span>146%</span>
+        <p>Уровень самоотдачи</p>
       </li>
       <li>
-        <p>100%</p>
-        <p>Соблюдение сроков<p>
+        <span>100%</span>
+        <p>Соблюдение сроков</p>
       </li>
       <li>
-        <p>50%</p>
-        <p>Минимальная предоплата<p>
+        <span>50%</span>
+        <p>Минимальная предоплата</p>
       </li>
     </ul>
   </section>
@@ -103,7 +113,7 @@
     <h2>Наши партнеры:</h2>
     <ul>
       <li>
-        <a href="#">
+        <a href="https://htmlacademy.ru/intensive">
         <img src="https://via.placeholder.com/199x68" alt="партнер html academy">
         </a>
       </li>
@@ -124,22 +134,52 @@
       </li>
     </ul>
   </section>
-</main>
 
-<footer>
-  <h2>Наш адрес и месторасположение:</h2>
-  <!-- Здесь будет карта -->
   <section>
-    <h3>NЁRDS DESIGN STUDIO</h3>
-    <p>191186, Санкт-Петербург,<br>
-    ул. Б. Конюшенная, д. 19/8</p>
-    <p>тел. +7 (812) 275-75-75</p>
-    <a href="blank.html">НАПИШИТЕ НАМ</a>
+    <h2>Карта</h2>
+    <!-- Здесь будет карта -->
   </section>
 
   <section>
-    <h3>маркер nёrd's на карте</h3>
+    <h2>Контактная информация</h2>
+    <p>
+      NЁRDS DESIGN STUDIO<br>
+      191186, Санкт-Петербург,<br>
+      ул. Б. Конюшенная, д. 19/8
+    </p>
+    <p>
+      тел.
+      <a href="tel:+78122757575">+7 (812) 275-75-75</a>
+    </p>
+    <a href="#">НАПИШИТЕ НАМ</a>
+  </section>
+
+  <section>
+    <h2>маркер nёrd's на карте</h2>
     <img src="https://via.placeholder.com/231x190" alt="маркер nёrd's на карте">
+  </section>
+</main>
+
+<footer>
+  <section>
+    <h2>Мы в соцсетях</h2>
+    <ul>
+      <li>
+        <a href="#">Вконтакте</a>
+      </li>
+      <li>
+        <a href="#">Фейсбук</a>
+      </li>
+      <li>
+        <a href="#">Инстаграм</a>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Скидка</h2>
+    <p>Давайте дружить, это выгодно!</p>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
   </section>
 </footer>
 </body>
