--- a/catalog.html
+++ b/catalog.html
@@ -7,3 +7,219 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
+<body>
+
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="https://via.placeholder.com/160x65" alt="логотип nёrds">
+      </a>
+      <ul>
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <div>
+        <a href="#">Корзина</a>
+      </div>
+    </nav>
+
+    <h1>Магазин готовых шаблонов</h1>
+  </header>
+
+  <main>
+
+    <section>
+      <h2>Фильтр цен и услуг</h2>
+      <span>Стоимость:</span>
+      <!-- Здесь будет форма фильтра-->
+    </section>
+
+    <section>
+      <h2>Фильтр сортировки</h2>
+      <span>Сортировать:</span>
+      <ul>
+        <li>
+          <button type="button" disabled>По цене</button>
+        </li>
+        <li>
+          <button type="button">По типу</button>
+        </li>
+        <li>
+          <button type="button">По названию</button>
+        </li>
+      </ul>
+      <button type="button">Вниз</button>
+      <button type="button">Вверх</button>
+    </section>
+
+    <section>
+      <h2>Список шаблонов</h2>
+      <ul>
+        <li>
+          <h3>SEDONA</h3>
+          <p>
+            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона SEDONA">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x580" alt="шаблон SEDONA">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона SEDONA">
+            <span>Sedona</span>
+            <span>Информационный сайт  для туристов</span>
+            <a href="#">9 900 ₽</a>
+          </p>
+
+        </li>
+
+        <li>
+          <h3>PINK</h3>
+          <p>
+            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона PINK">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x580" alt="шаблон PINK">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона PINK">
+            <span>Pink App</span>
+            <span>Продуктовый лендинг  приложения для iOS и Android</span>
+            <a href="#">9 900 ₽</a>
+          </p>
+        </li>
+
+        <li>
+          <h3>Barbershop BORODINSKI</h3>
+          <p>
+            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона Barbershop BORODINSKI">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x580" alt="шаблон Barbershop BORODINSKI">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона Barbershop BORODINSKI">
+            <span>Barbershop</span>
+            <span>Сайт салона красоты.  Для мужчин, да.</span>
+            <a href="#">9 900 ₽</a>
+          </p>
+        </li>
+
+        <li>
+          <h3>MiSHKA</h3>
+          <p>
+            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона MiSHKA">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x580" alt="шаблон MiSHKA">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона MiSHKA">
+            <span>MISHKA</span>
+            <span>Интернет-магазин  вязаных игрушек</span>
+            <a href="#">9 900 ₽</a>
+          </p>
+        </li>
+
+        <li>
+          <h3>A Plus</h3>
+          <p>
+            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона A Plus">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x580" alt="шаблон A Plus">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона A Plus">
+            <span>A Plus</span>
+            <span>Лендинг курсов повышения квалификации</span>
+            <a href="#">9 900 ₽</a>
+          </p>
+        </li>
+
+        <li>
+          <h3>КВАСТ</h3>
+          <p>
+            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона КВАСТ">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x580" alt="шаблон КВАСТ">
+          </p>
+          <p>
+            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона КВАСТ">
+            <span>КВАСТ</span>
+            <span>Промо-сайт производителя  крафтового кваса</span>
+            <a href="#">9 900 ₽</a>
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Пагинация</h2>
+      <ul>
+        <li>
+          <a>1</a>
+        </li>
+        <li>
+          <a href="#">2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">Следующая</a>
+        </li>
+      </ul>
+    </section>
+
+  </main>
+
+  <footer>
+    <section>
+      <h2>Карта</h2>
+      <!-- Здесь будет карта -->
+    </section>
+
+    <section>
+      <h2>Контактная информация</h2>
+      <p>Nёrds design studio</p>
+      <p>191186, Санкт-Петербург,<br>
+        ул. Б. Конюшенная, д. 19/8
+      </p>
+      <p>тел.
+        <a href="tel:+78122757575">+7 (812) 275-75-75</a>
+      </p>
+      <a href="#">НАПИШИТЕ НАМ</a>
+    </section>
+
+    <section>
+      <h2>маркер nёrd's на карте</h2>
+      <img src="https://via.placeholder.com/231x190" alt="маркер nёrd's на карте">
+    </section>
+
+    <section>
+      <h2>Мы в соцсетях</h2>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Скидка</h2>
+      <p>Давайте дружить, это выгодно!</p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </section>
+  </footer>
+</body>
+</html>
