Исправления в разметке внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -42,17 +42,17 @@
       <span>Сортировать:</span>
       <ul>
         <li>
-          <button type="button" disabled>По цене</button>
+          <a href="#">По цене</a>
         </li>
         <li>
-          <button type="button">По типу</button>
+          <a href="#">По типу</a>
         </li>
         <li>
-          <button type="button">По названию</button>
+          <a href="#">По названию</a>
         </li>
       </ul>
-      <button type="button">Вниз</button>
-      <button type="button">Вверх</button>
+      <a href="#">Вниз</a>
+      <a href="#">Вверх</a>
     </section>
 
     <section>
@@ -60,99 +60,62 @@
       <ul>
         <li>
           <h3>SEDONA</h3>
-          <p>
-            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона SEDONA">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x580" alt="шаблон SEDONA">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона SEDONA">
-            <span>Sedona</span>
-            <span>Информационный сайт  для туристов</span>
-            <a href="#">9 900 ₽</a>
-          </p>
-
+          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона SEDONA">
+          <img src="https://via.placeholder.com/360x580" alt="шаблон SEDONA">
+          <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона SEDONA">
+          <p>Sedona</p>
+          <p>Информационный сайт  для туристов</p>
+          <a href="#">9 900 ₽</a>
         </li>
 
         <li>
           <h3>PINK</h3>
-          <p>
-            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона PINK">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x580" alt="шаблон PINK">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона PINK">
-            <span>Pink App</span>
-            <span>Продуктовый лендинг  приложения для iOS и Android</span>
-            <a href="#">9 900 ₽</a>
-          </p>
+          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона PINK">
+          <img src="https://via.placeholder.com/360x580" alt="шаблон PINK">
+          <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона PINK">
+          <p>Pink App</p>
+          <p>Продуктовый лендинг  приложения для iOS и Android</p>
+          <a href="#">9 900 ₽</a>
         </li>
 
         <li>
           <h3>Barbershop BORODINSKI</h3>
-          <p>
-            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона Barbershop BORODINSKI">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x580" alt="шаблон Barbershop BORODINSKI">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона Barbershop BORODINSKI">
-            <span>Barbershop</span>
-            <span>Сайт салона красоты.  Для мужчин, да.</span>
-            <a href="#">9 900 ₽</a>
-          </p>
+          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона Barbershop BORODINSKI">
+          <img src="https://via.placeholder.com/360x580" alt="шаблон Barbershop BORODINSKI">
+          <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона Barbershop BORODINSKI">
+          <p>Barbershop</p>
+          <p>Сайт салона красоты.  Для мужчин, да.</p>
+          <a href="#">9 900 ₽</a>
         </li>
 
         <li>
           <h3>MiSHKA</h3>
-          <p>
-            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона MiSHKA">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x580" alt="шаблон MiSHKA">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона MiSHKA">
-            <span>MISHKA</span>
-            <span>Интернет-магазин  вязаных игрушек</span>
-            <a href="#">9 900 ₽</a>
-          </p>
+          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона MiSHKA">
+          <img src="https://via.placeholder.com/360x580" alt="шаблон MiSHKA">
+          <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона MiSHKA">
+          <p>MISHKA</p>
+          <p>Интернет-магазин  вязаных игрушек</p>
+          <a href="#">9 900 ₽</a>
         </li>
 
         <li>
           <h3>A Plus</h3>
-          <p>
-            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона A Plus">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x580" alt="шаблон A Plus">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона A Plus">
-            <span>A Plus</span>
-            <span>Лендинг курсов повышения квалификации</span>
-            <a href="#">9 900 ₽</a>
-          </p>
+          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона A Plus">
+          <img src="https://via.placeholder.com/360x580" alt="шаблон A Plus">
+          <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона A Plus">
+          <p>A Plus</p>
+          <p>Лендинг курсов повышения квалификации</p>
+          <a href="#">9 900 ₽</a>
         </li>
 
         <li>
           <h3>КВАСТ</h3>
-          <p>
-            <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона КВАСТ">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x580" alt="шаблон КВАСТ">
-          </p>
-          <p>
-            <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона КВАСТ">
-            <span>КВАСТ</span>
-            <span>Промо-сайт производителя  крафтового кваса</span>
-            <a href="#">9 900 ₽</a>
-          </p>
+          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона КВАСТ">
+          <img src="https://via.placeholder.com/360x580" alt="шаблон КВАСТ">
+          <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона КВАСТ">
+          <p>КВАСТ</p>
+          <p>Промо-сайт производителя  крафтового кваса</p>
+          <a href="#">9 900 ₽</a>
         </li>
       </ul>
     </section>
