--- a/index.html
+++ b/index.html
@@ -10,10 +10,51 @@
 
 <body class="page-body">
 
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="https://via.placeholder.com/160x65" alt="логотип nёrds">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <div class="user-navigation">
+        <a class="cart" href="#">Корзина</a>
+      </div>
+    </nav>
 
     <h1>Студия дизайна nёrd's</h1>
 
-<main>
+    <section class="photoslides">
+      <h2>Фотослайды</h2>
+      <ul  class="photoslides-list">
+        <li class="photoslides-item">
+          <p class="photoslides-slogan">Долго, дорого, скурпулезно.</p>
+          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <a class="button photoslides-know-button" href="#">Узнать больше</a>
+          <img src="https://via.placeholder.com/760x431" alt="3 телефона">
+        </li>
+        <li class="photoslides-item">
+          <p class="photoslides-slogan">Любим математику  как никто другой</p>
+          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+          <a class="button photoslides-know-button" href="#">Узнать больше</a>
+          <img src="https://via.placeholder.com/760x431" alt="2 компьютера">
+        </li>
+        <li class="photoslides-item">
+          <p class="photoslides-slogan">Только ночь, только хардкор</p>
+          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <a class="button photoslides-know-button" href="#">Узнать больше</a>
+          <img src="https://via.placeholder.com/760x431" alt="планшет и телефон">
+        </li>
+      </ul>
+      <button class="photoslides-button photoslides-button-first" type="button" disabled>кнопка1</button>
+      <button class="photoslides-button photoslides-button-second" type="button">кнопка2</button>
+      <button class="photoslides-button photoslides-button-third" type="button">кнопка3</button>
+    </section>
+  </header>
 
   <main class="container">
 
