Доработки в графике всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -171,7 +171,7 @@
     <section class="modal modal-map">
       <h2>Карта</h2>
       <!-- Здесь будет карта -->
-      <img src="img/map_1.jpg" width="1440" height="416" alt="карта с адресом nёrds">
+      <img src="img/map.jpg" width="1440" height="416" alt="карта с адресом nёrds">
     </section>
 
     <section class="contacts">
@@ -188,7 +188,7 @@
 
     <section class="marker">
       <h2>маркер nёrd's на карте</h2>
-      <img src="img/map-marker_1.png" width="231" height="190" alt="маркер nёrd's на карте">
+      <img src="img/map-marker.png" width="231" height="190" alt="маркер nёrd's на карте">
     </section>
 
     <section class="social">
