--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         <li><a href="#">Контакты</a></li>
       </ul>
       <div class="user-navigation">
-        <a class="cart" href="#">Корзина
-          <img src="https://via.placeholder.com/15x15" alt="">
-        </a>
+        <a class="cart" href="#">Корзина</a>
       </div>
     </nav>
 
@@ -157,7 +155,7 @@
     <section class="modal modal-map">
       <h2>Карта</h2>
       <!-- Здесь будет карта -->
-      <img src="img/map_1.jpg" width="1440" height="416" alt="карта с адресом nёrds">
+      <img src="img/map.jpg" width="1440" height="416" alt="карта с адресом nёrds">
     </section>
 
     <section class="contacts">
@@ -174,7 +172,7 @@
 
     <section class="marker">
       <h2>маркер nёrd's на карте</h2>
-      <img src="img/map-marker_1.png" width="231" height="190" alt="маркер nёrd's на карте">
+      <img src="img/map-marker.png" width="231" height="190" alt="маркер nёrd's на карте">
     </section>
 
     <section class="social">
