Сетка на гридах для внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -11,6 +11,7 @@
 <body  class="page-body">
 
   <header class="main-header">
+    <div class="main-header-wrapper">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип nёrds">
@@ -22,13 +23,12 @@
         <li><a href="#">Контакты</a></li>
       </ul>
       <div class="user-navigation">
-        <a class="cart" href="#">Корзина
-          <img src="https://via.placeholder.com/15x15" alt="">
-        </a>
+        <a class="cart" href="#">Корзина</a>
       </div>
     </nav>
 
     <h1 class="catalog-title">Магазин готовых шаблонов</h1>
+  </div>
   </header>
 
   <main class="page-catalog container">
@@ -64,7 +64,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="templates">
       <h2>Шаблоны</h2>
       <ul class="template-list">
         <li>
@@ -147,7 +147,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="pagination">
       <h2>Пагинация</h2>
       <ul class="pagination-list">
         <li class="pagination-item pagination-item-current">
@@ -191,6 +191,7 @@
       <img src="img/map-marker.png" width="231" height="190" alt="маркер nёrd's на карте">
     </section>
 
+<div class="footer-container">
     <section class="social">
       <h2>Мы в соцсетях</h2>
       <ul class="social-list">
@@ -211,6 +212,7 @@
       <p class="sale-tagline">Давайте дружить, это выгодно!</p>
       <p class="sale-desc">Скидка 10% для друзей из социальных сетей.</p>
     </section>
+  </div>
   </footer>
 </body>
 </html>
