Оживляем интерактивные элементы

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
         <section class="statistics">
           <h2 class="visually-hidden">Статистика</h2>
+
           <p class="statistics-caption">С 2004 года любим точность во всем:</p>
           <ul class="statistics-list">
             <li class="statistics-item">
@@ -129,6 +130,7 @@
             <p class="statistics-desc-2">Соблюдение<br> сроков</p>
             <p class="statistics-desc-3">Минимальная<br> предоплата</p>
           </div>
+        
         </section>
       </div>
 
@@ -232,9 +234,6 @@
     </div>
   </footer>
 
-
-
-
   <section class="modal">
     <h2>Напишите нам</h2>
     <form class="write-to-us-form" action="https://echo.htmlacademy.ru" method="post">
@@ -256,6 +255,8 @@
     </form>
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
+
+<script src="js/popup.js"></script>
 
 </body>
 </html>
