--- a/catalog.html
+++ b/catalog.html
@@ -350,5 +350,7 @@
   <button class="modal-close" type="button" aria-label="Закрыть"></button>
 </section>
 
+<script src="js/popup.js"></script>
+
 </body>
 </html>
